--- a/.env.sample
+++ b/.env.sample
@@ -17,9 +17,10 @@ AZURE_SEARCH_STRICTNESS=3
 AZURE_OPENAI_RESOURCE=
 AZURE_OPENAI_MODEL=
 AZURE_OPENAI_KEY=
-AZURE_OPENAI_MODEL_NAME=gpt-35-turbo-16k
-AZURE_OPENAI_TEMPERATURE=0
-AZURE_OPENAI_TOP_P=1.0
+# AZURE_OPENAI_MODEL_NAME=gpt-35-turbo-16k
+AZURE_OPENAI_MODEL_NAME=gpt-4-32k
+AZURE_OPENAI_TEMPERATURE=0.7
+AZURE_OPENAI_TOP_P=0.95
 AZURE_OPENAI_MAX_TOKENS=1000
 AZURE_OPENAI_STOP_SEQUENCE=
 AZURE_OPENAI_SYSTEM_MESSAGE=You are an AI assistant that helps people find information.
